nextflow runs docker on hello.py

--- a/next_docker/Dockerfile
+++ b/next_docker/Dockerfile
@@ -7,9 +7,7 @@ RUN apt-get update
 RUN apt-get install -y python python-pip wget
 RUN pip install Flask
 
-add . /home
-
+COPY hello.py /home/hello.py
 
 WORKDIR /home
 
-CMD ["python", "hello.py"]
